bug(Dashboard): fix the overflow of the exchange total volume at certain responsive endpoints and also fix the charts for when both shorts and longs are 0

--- a/src/styling/_single-stat.sass
+++ b/src/styling/_single-stat.sass
@@ -35,7 +35,7 @@
 .single-stat-box__stats
   h2
     font-size: 40px
-    line-height: 40px
+    line-height: 40px      
     padding-bottom: 18px
     font-weight: 600
   div
@@ -339,7 +339,15 @@ tr th:nth-child(1)
 
   tr th
     padding-top: 30px
+  
+  .single-stat-box__stats
+    h2
+      font-size: 34px
 
++widescreen
+  .single-stat-box__stats
+    h2
+      font-size: 40px
 
 .markets-link
   & > .column.is-one-quarter-desktop
